docs/tests/typing/bad/testfile-subtyping-1.cpp
class A { public: };
class B : public A { public: };

int main() { B *x = new A(); }

